--- a/src/Memo.Blog.App/wwwroot/index.html
+++ b/src/Memo.Blog.App/wwwroot/index.html
@@ -13,10 +13,7 @@
 </head>
 
 <body>
-
-    <div class="status-bar-safe-area"></div>
-
-    <div id="app">Loading...</div>
+    <div id="app"></div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
