--- a/src/Memo.Blog.App/wwwroot/index.html
+++ b/src/Memo.Blog.App/wwwroot/index.html
@@ -10,6 +10,8 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="_content/Masa.Blazor/css/masa-blazor.min.css" rel="stylesheet" />
     <link href="css/materialdesign/v7.4.47/css/materialdesignicons.min.css" rel="stylesheet">
+
+    <link href="css/extend/masa-blazor-extend.css" rel="stylesheet" />
 </head>
 
 <body>
