--- a/src/Memo.Blog.App/wwwroot/index.html
+++ b/src/Memo.Blog.App/wwwroot/index.html
@@ -12,6 +12,8 @@
     <link href="css/materialdesign/v7.4.47/css/materialdesignicons.min.css" rel="stylesheet">
 
     <link href="css/extend/masa-blazor-extend.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/10.2.0/swiper-bundle.min.css"/>
+
 </head>
 
 <body>
@@ -25,7 +27,7 @@
 
     <script src="_framework/blazor.webview.js" autostart="false"></script>
     <script src="_content/Masa.Blazor/js/masa-blazor.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/10.2.0/swiper-bundle.min.js"></script>
 </body>
 
 </html>
