✨ 使用panzoom 替换 pinch-zoom

--- a/src/Memo.Blog.App/wwwroot/index.html
+++ b/src/Memo.Blog.App/wwwroot/index.html
@@ -31,7 +31,7 @@
     <script src="_content/Masa.Blazor/js/masa-blazor.js"></script>
     <script src="npm/swiper/10.2.0/swiper-bundle.min.js"></script>
     <script src="npm/vditor/3.10.6/dist/index.min.js"></script>
-    <script src="npm/pinch-zoom.js"></script>
+    <script src="npm/panzoom/9.4.3/panzoom.min.js"></script>
     <script src="js/vditor-icons.js"></script>
 </body>
 
